--- a/Cwp.GYM/Cwp.BLL/Cwp.BLL.csproj
+++ b/Cwp.GYM/Cwp.BLL/Cwp.BLL.csproj
@@ -50,6 +50,8 @@
     <Compile Include="adress\streetBLL.cs" />
     <Compile Include="EntityBLL.cs" />
     <Compile Include="gym\gymBLL.cs" />
+    <Compile Include="level\customerlevelBLL.cs" />
+    <Compile Include="person\customerBLL.cs" />
     <Compile Include="person\personBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
