--- a/Cwp.GYM/Cwp.BLL/Cwp.BLL.csproj
+++ b/Cwp.GYM/Cwp.BLL/Cwp.BLL.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -49,8 +50,14 @@
     <Compile Include="adress\ProvinceBLL.cs" />
     <Compile Include="adress\streetBLL.cs" />
     <Compile Include="EntityBLL.cs" />
+    <Compile Include="gym\courseBLL.cs" />
+    <Compile Include="gym\equipmentBLL.cs" />
     <Compile Include="gym\gymBLL.cs" />
+    <Compile Include="gym\gym_equipmentBLL.cs" />
+    <Compile Include="level\coachlevelBLL.cs" />
     <Compile Include="level\customerlevelBLL.cs" />
+    <Compile Include="level\stafflevelBLL.cs" />
+    <Compile Include="person\coachBLL.cs" />
     <Compile Include="person\customerBLL.cs" />
     <Compile Include="person\personBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
