--- a/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
+++ b/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
@@ -46,6 +46,7 @@
     <Compile Include="adress\province.cs" />
     <Compile Include="adress\street.cs" />
     <Compile Include="dataList.cs" />
+    <Compile Include="gym\course.cs" />
     <Compile Include="gym\equipment.cs" />
     <Compile Include="gym\gymroom.cs" />
     <Compile Include="gym\gym_equipment.cs" />
