--- a/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
+++ b/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
@@ -47,8 +47,11 @@
     <Compile Include="adress\street.cs" />
     <Compile Include="dataList.cs" />
     <Compile Include="gym\course.cs" />
+    <Compile Include="gym\customer_course.cs" />
     <Compile Include="gym\equipment.cs" />
+    <Compile Include="gym\gymRegister.cs" />
     <Compile Include="gym\gymroom.cs" />
+    <Compile Include="gym\gym_course.cs" />
     <Compile Include="gym\gym_equipment.cs" />
     <Compile Include="level\coachlevel.cs" />
     <Compile Include="level\customerlevel.cs" />
