--- a/Cwp.GYM/Cwp.Common/Cwp.Common.csproj
+++ b/Cwp.GYM/Cwp.Common/Cwp.Common.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ClassCommon\ChangeToClass.cs" />
     <Compile Include="ClassCommon\ForeachClass.cs" />
+    <Compile Include="CodeCommon\Base64.cs" />
     <Compile Include="CodeCommon\RegularExpressionsCommon.cs" />
     <Compile Include="CodeCommon\UtilCommon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
