--- a/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
+++ b/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
@@ -60,6 +60,7 @@
     <Compile Include="personnel\customer.cs" />
     <Compile Include="personnel\person.cs" />
     <Compile Include="personnel\staff.cs" />
+    <Compile Include="picturepath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
