--- a/Cwp.GYM/Cwp.GYM/Cwp.GYM.csproj
+++ b/Cwp.GYM/Cwp.GYM/Cwp.GYM.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Controllers\staffController.cs" />
     <Compile Include="Controllers\stafflevelController.cs" />
     <Compile Include="Controllers\streetController.cs" />
+    <Compile Include="Controllers\UploadController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
