--- a/Cwp.GYM/Cwp.GYM/Web.config
+++ b/Cwp.GYM/Cwp.GYM/Web.config
@@ -12,9 +12,10 @@
   <system.webServer>
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
-      <remove name="OPTIONSVerbHandler" />
+      <!--<remove name="OPTIONSVerbHandler" />-->
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+      <add verb="*" path="ashx/imgupdate.ashx"  name="imgupdate" type="Cwp.GYM.ashx.imgupdate"/>
     </handlers>
     <httpProtocol>
       <customHeaders>
