--- a/Cwp.GYM/Cwp.GYM/Cwp.GYM.csproj
+++ b/Cwp.GYM/Cwp.GYM/Cwp.GYM.csproj
@@ -100,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="ashx\imgupdate.ashx.cs">
+      <DependentUpon>imgupdate.ashx</DependentUpon>
+    </Compile>
     <Compile Include="Controllers\areaController.cs" />
     <Compile Include="Controllers\cityController.cs" />
     <Compile Include="Controllers\coachController.cs" />
@@ -126,6 +129,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ashx\imgupdate.ashx" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
