--- a/Cwp.GYM/Cwp.DAL/Cwp.DAL.csproj
+++ b/Cwp.GYM/Cwp.DAL/Cwp.DAL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="personnel\personDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sqlHelp.cs" />
+    <Compile Include="staffDAL.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cwp.Common\Cwp.Common.csproj">
