--- a/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
+++ b/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
@@ -49,17 +49,23 @@
     <Compile Include="gym\course.cs" />
     <Compile Include="gym\customer_course.cs" />
     <Compile Include="gym\equipment.cs" />
+    <Compile Include="gym\equipmentAndImg.cs" />
     <Compile Include="gym\gymRegister.cs" />
     <Compile Include="gym\gymroom.cs" />
     <Compile Include="gym\gym_course.cs" />
     <Compile Include="gym\gym_equipment.cs" />
+    <Compile Include="gym\gym_equipmentAndImg.cs" />
+    <Compile Include="gym\gym_record.cs" />
     <Compile Include="level\coachlevel.cs" />
     <Compile Include="level\customerlevel.cs" />
     <Compile Include="level\stafflevel.cs" />
     <Compile Include="personnel\coach.cs" />
     <Compile Include="personnel\customer.cs" />
+    <Compile Include="personnel\loginModel.cs" />
     <Compile Include="personnel\person.cs" />
     <Compile Include="personnel\staff.cs" />
+    <Compile Include="personnel\staffAndImg.cs" />
+    <Compile Include="personnel\staffLeave.cs" />
     <Compile Include="picturepath.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
