--- a/Cwp.GYM/Cwp.GYM/Cwp.GYM.csproj
+++ b/Cwp.GYM/Cwp.GYM/Cwp.GYM.csproj
@@ -100,6 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="ashx\imgchange.ashx.cs">
+      <DependentUpon>imgchange.ashx</DependentUpon>
+    </Compile>
+    <Compile Include="ashx\imgdelete.ashx.cs">
+      <DependentUpon>imgdelete.ashx</DependentUpon>
+    </Compile>
     <Compile Include="ashx\imgdown.ashx.cs">
       <DependentUpon>imgdown.ashx</DependentUpon>
     </Compile>
@@ -124,6 +130,7 @@
     <Compile Include="Controllers\provinceController.cs" />
     <Compile Include="Controllers\registerController.cs" />
     <Compile Include="Controllers\staffController.cs" />
+    <Compile Include="Controllers\staffLeaveController.cs" />
     <Compile Include="Controllers\stafflevelController.cs" />
     <Compile Include="Controllers\streetController.cs" />
     <Compile Include="Global.asax.cs">
@@ -134,6 +141,8 @@
   <ItemGroup>
     <Content Include="ashx\imgupdate.ashx" />
     <Content Include="ashx\imgdown.ashx" />
+    <Content Include="ashx\imgchange.ashx" />
+    <Content Include="ashx\imgdelete.ashx" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
