--- a/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
+++ b/Cwp.GYM/Cwp.Model/Cwp.Model.csproj
@@ -56,6 +56,7 @@
     <Compile Include="gym\gym_equipment.cs" />
     <Compile Include="gym\gym_equipmentAndImg.cs" />
     <Compile Include="gym\gym_record.cs" />
+    <Compile Include="imgurlmodel.cs" />
     <Compile Include="level\coachlevel.cs" />
     <Compile Include="level\customerlevel.cs" />
     <Compile Include="level\stafflevel.cs" />
